force-app/main/default/objects/Business_Owner__c/Business_Owner__c.object-meta.xml
<CustomObject>
    <label>Business Owner</label>
    <nameField>
        <label>Business Owner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Owners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>