force-app/main/default/objects/Business_Owner__c/fields/Business__c.field-meta.xml
<CustomField>
    <fullName>Business__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business</label>
    <referenceTo>Business__c</referenceTo>
    <relationshipLabel>Business Owners</relationshipLabel>
    <relationshipName>Business_Owners</relationshipName>
    <type>Lookup</type>
</CustomField>