force-app/main/default/objects/Business_Owner__c/fields/Number_of_Dependents__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Dependents__c</fullName>
    <label>Number of Dependents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>