force-app/main/default/objects/Business_Owner__c/fields/Own_Home__c.field-meta.xml
<CustomField>
    <fullName>Own_Home__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owns Home</label>
    <type>Checkbox</type>
</CustomField>