force-app/main/default/objects/Business_Owner__c/fields/Ownership_in_Number_of_Shares__c.field-meta.xml
<CustomField>
    <fullName>Ownership_in_Number_of_Shares__c</fullName>
    <label>Ownership in % / Number of Shares</label>
    <length>255</length>
    <type>Text</type>
</CustomField>