force-app/main/default/objects/Business_Owner__c/fields/Owns_Business__c.field-meta.xml
<CustomField>
    <fullName>Owns_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owns Business</label>
    <type>Checkbox</type>
</CustomField>