force-app/main/default/objects/Business_Owner__c/fields/Owns_Rental__c.field-meta.xml
<CustomField>
    <fullName>Owns_Rental__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owns Rental</label>
    <type>Checkbox</type>
</CustomField>