force-app/main/default/objects/Business_Owner__c/fields/Owns_Stocks__c.field-meta.xml
<CustomField>
    <fullName>Owns_Stocks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owns Stocks</label>
    <type>Checkbox</type>
</CustomField>