force-app/main/default/objects/Business_Owner__c/fields/Spouse_DoB__c.field-meta.xml
<CustomField>
    <fullName>Spouse_DoB__c</fullName>
    <label>Spouse DoB</label>
    <type>Date</type>
</CustomField>