force-app/main/default/objects/Business_Owner__c/fields/Spouse_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Spouse_First_Name__c</fullName>
    <label>Spouse First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>