force-app/main/default/objects/Business_Owner__c/fields/Spouse_SSN__c.field-meta.xml
<CustomField>
    <fullName>Spouse_SSN__c</fullName>
    <label>Spouse SSN</label>
    <length>20</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>