force-app/main/default/objects/Business_Owner__c/fields/State_Return__c.field-meta.xml
<CustomField>
    <fullName>State_Return__c</fullName>
    <defaultValue>false</defaultValue>
    <label>State Return</label>
    <type>Checkbox</type>
</CustomField>