force-app/main/default/objects/Business_Owner__c/recordTypes/Default_Business_Owner.recordType-meta.xml
<RecordType>
    <fullName>Default_Business_Owner</fullName>
    <active>true</active>
    <label>Default Business Owner</label>
</RecordType>