force-app/main/default/objects/Business_Owner__c/recordTypes/Default_Business_Owner_Corp.recordType-meta.xml
<RecordType>
    <fullName>Default_Business_Owner_Corp</fullName>
    <active>true</active>
    <label>Default Business Owner - Corp</label>
</RecordType>