force-app/main/default/objects/Business_Owner__c/recordTypes/Layout_w_o_SSN.recordType-meta.xml
<RecordType>
    <fullName>Layout_w_o_SSN</fullName>
    <active>true</active>
    <label>Layout w/o SSN</label>
</RecordType>